--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -29,7 +29,7 @@ spring:
   datasource:
     url: "jdbc:mysql://localhost/library"
     username: "root"
-    password: "!Tjdwns0526"
+    password: "'!Tjdwns0526'"
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
