비밀번호 다시변경3

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
     activate:
       on-profile: dev
   datasource:
-    url: "jdbc:mysql://localhost/library"
+    url: "jdbc:mysql://localhost:8080/library"
     username: "root"
     password: "'!Tjdwns0526'"
     driver-class-name: com.mysql.cj.jdbc.Driver
