비밀번호 다시변경5

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -27,9 +27,9 @@ spring:
     activate:
       on-profile: dev
   datasource:
-    url: "jdbc:mysql://localhost:8080/library"
+    url: "jdbc:mysql://localhost/library"
     username: "root"
-    password: "'!Tjdwns0526'"
+    password: "Abcd1234!"
     driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
     hibernate:
